@@ -76,37 +76,44 @@ dist.excel="GAMMADIST(A%d,1,2,0)"
 [Run 31]
 dist.variate=gamma_d(0.01,2)
 dist.excel="GAMMADIST(A%d,0.01,2,0)"
+dist.n=500000
 # -->OK
 
 [Run 32]
 dist.variate=gamma_d(0.1,2)
 dist.excel="GAMMADIST(A%d,0.1,2,0)"
 dist.n=500000
+# -->OK
 
 [Run 33]
 dist.variate=gamma_d(0.6,5)
 dist.excel="GAMMADIST(A%d,0.6,5,0)"
 dist.n=500000
+# -->OK
 
 [Run 34]
 dist.variate=gamma_d(0.95,5)
 dist.excel="GAMMADIST(A%d,0.95,5,0)"
 dist.n=500000
+# -->OK
 
 [Run 35]
 dist.variate=gamma_d(1.05,5)
 dist.excel="GAMMADIST(A%d,1.05,5,0)"
 dist.n=500000
+# -->OK
 
 [Run 36]
 dist.variate=gamma_d(2,5)
 dist.excel="GAMMADIST(A%d,2,5,0)"
 dist.n=500000
+# -->OK
 
 [Run 37]
 dist.variate=gamma_d(7,5)
 dist.excel="GAMMADIST(A%d,7,5,0)"
 dist.n=500000
+# -->OK
 
 [Run 38]
 dist.variate=gamma_d(20,5)
